# websight

./: .gitattributes  .gitignore  0.39.0  EVALUATION_README.md  README.md  api_client.py  browser.py  demo_evaluation.py  evaluate_websight.py  firefox_controller.py  inference.py  job.sh  main.py  pyproject.toml  requirements.txt  task.py  train_waveui_lora.yaml  websight.py  webvoyavger.json
agent/: __init__.py  actions.py  prompts.py
agent-tests/: quick_test.py  test_new_model.py  test_vision.py
communicators/: api_client.py  llms.py  prompts.py  uitars.py  uitars_finetuned.py  vlm.py
eval/: __init__.py
eval/showdown/: __init__.py  clicks.py  download_dataset.py  utils.py
eval_results/: demo_results_1748883875.json
eval_tests/: test_evaluation.py
eval_tests/showdown/: clicks.py  download_dataset.py  utils.py
model/: __init__.py  prepare_data.py  train_waveui_lora.yaml  upload_model.py  websight.py
old/: agent.py  main.py  working_agent.py
scratch_controllers/: chrome_controller.py  firefox_controller.py
scripts/: manual_image_demo.py  merge.py
tests/: demo.py  simple_agent.py  simple_vision_test.py  test_actions.py  test_manual_image.py  test_websight_call.py
