[project]
name = "websight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.10.1",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "selenium>=4.33.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "webdriver-manager>=4.0.2",
]
